[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-feed-watch"
version = "0.1.0"
description = "Multi-source radio transcription, incident geocoding, and waypoint alerts for Home Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ifnull" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "aiomqtt>=2.3",
  "geopy>=2.4",
]

[project.optional-dependencies]
local-stt = [
  "faster-whisper>=1.1",
]
deepgram = [
  "deepgram-sdk>=3.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[project.scripts]
radio-feed-watch = "radio_feed_watch.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
